deployments/app-protect/nginx-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-app-protect
  namespace: nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx-app-protect
  template:
    metadata:
      labels:
        app: nginx-app-protect
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      hostNetwork: true
      containers:
      - image: isclab/app_protect:edge
        imagePullPolicy: Always
        name: nginx-app-protect
        ports:
        - name: http
          containerPort: 8080
          hostPort: 8080
        - name: https
          containerPort: 8443
          hostPort: 8443
       #- name: prometheus
         #containerPort: 9113
        volumeMounts:
        - mountPath: /etc/nginx/waf # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-waf
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            drop:
            - ALL
            add:
            - CAP_NET_BIND_SERVICE
          procMount: Default
          runAsUser: 999
          runAsGroup: 998
          privileged: true
        args:
          - -nginx-plus
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          - -v=1 # Enables extensive logging. Useful for troubleshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-leader-election
         #- -enable-prometheus-metrics
      volumes:
      - name: nginx-waf
        configMap:
          name: nginx-waf # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: waf-policy.json
              path: waf-policy.json
      imagePullSecrets:
        - name: regcred
