deployments/app-protect/juiceshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juiceshop
  namespace: staging
  labels:
    app: juiceshop
spec:
  ports:
  - name: juiceshop
    port: 8081
    protocol: TCP
    targetPort: 3000
  type: NodePort
  selector:
    app: juiceshop
