deployments/app-protect/juiceshop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: juiceshop-ingress
  namespace: staging
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.org/server-snippets: |
      proxy_http_version 1.1;
spec:
  rules:
  - host: www.juice-shop.nginxwaf.com:8080
    http:
      paths:
      - path: /
        backend:
          serviceName: juiceshop
          servicePort: 8081
